Updated privacy policy TODO list added Corrected misaligned login/notification bell Merged login partial into layout Seed predefined data into request type Seed predefined data into user

--- a/Interface/wwwroot/css/site.css
+++ b/Interface/wwwroot/css/site.css
@@ -441,6 +441,8 @@ select.custom-select {
 
 .custom-icon {
     line-height: none !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 .btn {
@@ -465,4 +467,9 @@ select.custom-select {
 
 .btn-line {
     line-height: 0 !important;
+}
+
+.login-area {
+    margin-left: 40%;
+    display: flex;
 }
